# prototype-nobyte-language

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  _config.yml  build.sh  clean.sh  conanfile.txt  format.sh  index.adoc  lint.sh  main.cpp  old_index.adoc  run.sh  valgrind.sh
_guides/: main_page.adoc
_posts/: 2024-05-25-welcome-aboard.adoc
args/: CMakeLists.txt
args/inc/: arg_config.hpp  arg_parser.hpp
args/src/: arg_config.hpp  arg_parser.cpp
args/tests/: unit_tests.cpp
ast/: CMakeLists.txt
ast/inc/: ast.hpp
ast/src/: ast.cpp
ast/tests/: unit_tests.cpp
code_generator/: CMakeLists.txt
code_generator/inc/: code_generator.hpp
code_generator/src/: code_generator.cpp
code_generator/tests/: unit_tests.cpp
deploy/docker/: .dockerignore  Dockerfile
deploy/helm/: values.yaml
examples/: broken.shl  step1.nob
ir/: CMakeLists.txt
ir/inc/: ir.hpp
ir/src/: ir.cpp
ir/tests/: unit_tests.cpp
lexer/: CMakeLists.txt
lexer/inc/: lexer.hpp  token_struct.hpp  token_type.hpp
lexer/src/: lexer.cpp
lexer/tests/: lexer_testdata.nob  unit_tests.cpp
parser/: CMakeLists.txt
parser/inc/: analyzer.hpp  parser.hpp
parser/src/: analyzer.cpp  parser.cpp
parser/tests/: unit_tests.cpp
symbol_table/: CMakeLists.txt
symbol_table/inc/: table.hpp
symbol_table/src/: table.cpp
symbol_table/tests/: unit_tests.cpp
utilities/: CMakeLists.txt
utilities/inc/: char_type.hpp
utilities/src/: char_type.cpp
utilities/tests/: unit_tests.cpp
